# AI_Intro

./: .gitignore  README.md  pyproject.toml
ai_ue/ex1/: documentation.md  main.py
ai_ue/ex1/_documentation_files/: plantUML.txt
ai_ue/ex2/: Exercise_2_cifar.ipynb
ai_ue/ex3/: Lab3.ipynb  handwritten-ocr-cnn.py
